--- a/css/main.css
+++ b/css/main.css
@@ -6,7 +6,7 @@
     font-style: normal;
 }
 h1 {
-    font-family: 'cooper_blackregular';
+    font-family: 'font-family: 'Shrikhand';
     text-align: center;
     margin: 150px 150px 30px 150px;
     font-size: 60px;
