--- a/css/main.css
+++ b/css/main.css
@@ -10,7 +10,7 @@
     text-align: center;
     margin: 150px 150px 30px 150px;
     font-size: 60px;
-    color: #FFD26A;
+    color: #F8E6FF;
 }
 .homepage {
     font-family: 'Lato', sans-serif;
