--- a/css/main.css
+++ b/css/main.css
@@ -5,7 +5,7 @@
     font-weight: normal;
     font-style: normal;
 }
-.h1 {
+.name {
     font-family: 'Lato', sans-serif;
     text-align: center;
     margin: 150px 150px 30px 150px;
