--- a/css/main.css
+++ b/css/main.css
@@ -6,11 +6,11 @@
     font-style: normal;
 }
 .name {
-    font-family: 'Shrikhand';
+    font-family: 'Lato', sans-serif;
     text-align: center;
     margin: 150px 150px 30px 150px;
     font-size: 60px;
-    color: #F8E6FF;
+    color: #FFC956;
 }
 .homepage {
     font-family: 'Lato', sans-serif;
@@ -26,7 +26,7 @@
     font-family: 'Lato', sans-serif;
     font-size: 18px;
     color: #99967D;
-    font-weight: 700;
+    font-weight: 300;
     padding: 15px 15px 0px 0px;
     margin: 20px;
     display: block;
