--- a/css/main.css
+++ b/css/main.css
@@ -25,7 +25,7 @@
     text-align: right;
     font-family: 'Lato', sans-serif;
     font-size: 18px;
-    color: #99967D;
+    color: #FF994A;
     font-weight: 300;
     padding: 15px 15px 0px 0px;
     margin: 20px;
