--- a/css/main.css
+++ b/css/main.css
@@ -16,7 +16,7 @@
     font-family: 'Lato', sans-serif;
     text-align: right;
     font-size: 18px;
-    color: #99967D;
+    color: #000000;
     font-weight: 300;
     margin: 0px 160px 0px 0px;
 }
