--- a/css/main.css
+++ b/css/main.css
@@ -44,6 +44,15 @@ a:hover{
    font-weight: 900;
 }
 
+.work.body{
+    font-family: 'Lato', sans-serif;
+    text-align: left;
+    font-size: 18px;
+    color: black;
+    font-weight: 300;
+    margin: 0px 160px 0px 0px;
+}
+
 .contactpage{
     font-family: 'Lato', sans-serif;
     color: black;
