--- a/css/main.css
+++ b/css/main.css
@@ -44,7 +44,7 @@ a:hover{
    font-weight: 900;
 }
 
-.work.body{
+.workbody{
     font-family: 'Lato', sans-serif;
     text-align: left;
     font-size: 18px;
