--- a/css/main.css
+++ b/css/main.css
@@ -46,11 +46,11 @@ a:hover{
 
 .workbody{
     font-family: 'Lato', sans-serif;
-    text-align: left;
+    text-align: center;
     font-size: 18px;
     color: black;
     font-weight: 300;
-    margin: 100px 160px 0px 0px;
+    margin: 000px 160px 0px 0px;
 }
 
 .contactpage{
