--- a/css/main.css
+++ b/css/main.css
@@ -16,7 +16,7 @@
 
 .homepage{
     font-family: 'Lato', sans-serif;
-    text-align: center;
+    text-align: left;
     font-size: 18px;
     color: black;
     font-weight: 300;
