--- a/css/main.css
+++ b/css/main.css
@@ -17,6 +17,7 @@
 .homepage{
     font-family: 'Lato', sans-serif;
     text-align: left;
+    padding: 0px 0px 0px 200px;
     font-size: 18px;
     color: black;
     font-weight: 300;
