--- a/css/main.css
+++ b/css/main.css
@@ -18,7 +18,7 @@
     font-family: 'Lato', sans-serif;
     text-align: left;
     position: relative;
-    left: 200px;
+    right: 200px;
     font-size: 18px;
     color: black;
     font-weight: 300;
