--- a/css/main.css
+++ b/css/main.css
@@ -59,6 +59,15 @@ a:hover{
     margin: 000px 160px 0px 0px;
 }
 
+.header{
+    font-family: 'Lato', sans-serif;
+    text-align: center;
+    font-size: 20px;
+    color: #FF994A;
+    font-weight: 300;
+    margin: 000px 160px 0px 0px;
+}
+
 .contactpage{
     font-family: 'Lato', sans-serif;
     color: black;
