--- a/css/main.css
+++ b/css/main.css
@@ -61,7 +61,7 @@ a:hover{
 
 .header{
     font-family: 'Lato', sans-serif;
-    text-align: center;
+    text-align: left;
     font-size: 20px;
     color: #FF994A;
     font-weight: 300;
