--- a/css/main.css
+++ b/css/main.css
@@ -52,11 +52,11 @@ a:hover{
 
 .workbody{
     font-family: 'Lato', sans-serif;
-    text-align: center;
+    text-align: left;
     font-size: 18px;
     color: black;
     font-weight: 300;
-    margin: 000px 160px 0px 0px;
+    margin: 0px 160px 0px 0px;
 }
 
 .header{
@@ -65,7 +65,7 @@ a:hover{
     font-size: 20px;
     color: #FF994A;
     font-weight: 300;
-    margin: 000px 160px 0px 0px;
+    margin: 0px 160px 0px 0px;
 }
 
 .contactpage{
