--- a/css/main.css
+++ b/css/main.css
@@ -52,7 +52,7 @@ a:hover{
 
 .workbody{
     font-family: 'Lato', sans-serif;
-    text-align: left;
+    text-align: center;
     font-size: 18px;
     color: black;
     font-weight: 300;
@@ -61,7 +61,7 @@ a:hover{
 
 .header{
     font-family: 'Lato', sans-serif;
-    text-align: left;
+    text-align: center;
     font-size: 20px;
     color: #FF994A;
     font-weight: 300;
@@ -75,4 +75,8 @@ a:hover{
     font-weight: 300;
     margin: 0px 50px;
     font-size: 18px;
+}
+
+.twitter-tweet{
+text-align:center;
 }
