--- a/css/main.css
+++ b/css/main.css
@@ -16,7 +16,7 @@
 
 .homepage{
     font-family: 'Lato', sans-serif;
-    text-align: left;
+    text-align: center;
     margin: 150px 150px 100px 200px;
     font-size: 18px;
     color: black;
